--- a/sam.ipynb
+++ b/sam.ipynb
@@ -680,16 +680,19 @@
     "        #print(np.array((self.W @ X) > 0, dtype=int))\n",
     "        return np.array((self.W @ X) > 0, dtype=int)\n",
     "\n",
-    "    def fit(self, X, y, n_epochs):\n",
-    "        for i in range(0, n_epochs):\n",
-    "            predictions = self.predict(X)\n",
-    "            e = y_train - predictions\n",
-    "            dW = self.learning_rate * (e @ X.T)\n",
-    "            self.W += dW\n",
-    "            print(\"After {} epochs: {} errors\".format(self.epochs, np.sum( \n",
-    "                np.array(e != 0, dtype=int)\n",
-    "            )))\n",
-    "            self.epochs += 1\n",
+    "    def fit(self, X, y, n_epochs, batch_size = 0):\n",
+    "        if (batch_size = 0):\n",
+    "            for i in range(0, n_epochs):\n",
+    "                predictions = self.predict(X)\n",
+    "                e = y_train - predictions\n",
+    "                dW = self.learning_rate * (e @ X.T)\n",
+    "                self.W += dW\n",
+    "                print(\"After {} epochs: {} errors\".format(self.epochs, np.sum( \n",
+    "                    np.array(e != 0, dtype=int)\n",
+    "                )))\n",
+    "                self.epochs += 1\n",
+    "            else:\n",
+    "                \n",
     "\n",
     "    def fit_one_epoch(self, X, y):\n",
     "        nErrors = 0\n",
