--- a/Lab2/SOM_animals.ipynb
+++ b/Lab2/SOM_animals.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
        "(32, 84)"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 218,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
        "       0, 0, 1, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0])"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 219,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 220,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 221,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,12 +150,13 @@
     "    def fit(self, X, n_epochs):\n",
     "        for e in range(n_epochs):\n",
     "            # y = -3*e + 50\n",
-    "            # y = descending_logarithmic(e)\n",
-    "            y = custom_sigmoid(e)\n",
+    "            y = descending_logarithmic(e)\n",
+    "            # y = custom_sigmoid(e)\n",
     "\n",
-    "            self.neighborhood_size = math.floor(y)\n",
-    "            # else:\n",
-    "            #     self.neighborhood_size = 1\n",
+    "            if (y>0):\n",
+    "                self.neighborhood_size = math.floor(y)\n",
+    "            else:\n",
+    "                self.neighborhood_size = 0\n",
     "\n",
     "            print(\"{}: {}\".format(e, self.neighborhood_size))\n",
     "\n",
@@ -168,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 223,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,31 +178,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0: 50\n",
-      "1: 50\n",
-      "2: 50\n",
-      "3: 50\n",
-      "4: 50\n",
-      "5: 50\n",
-      "6: 49\n",
-      "7: 49\n",
-      "8: 49\n",
-      "9: 49\n",
-      "10: 49\n",
-      "11: 49\n",
-      "12: 49\n",
-      "13: 49\n",
-      "14: 49\n",
-      "15: 25\n",
-      "16: 0\n",
-      "17: 0\n",
+      "0: 49\n",
+      "1: 39\n",
+      "2: 31\n",
+      "3: 25\n",
+      "4: 20\n",
+      "5: 16\n",
+      "6: 13\n",
+      "7: 10\n",
+      "8: 8\n",
+      "9: 6\n",
+      "10: 5\n",
+      "11: 4\n",
+      "12: 3\n",
+      "13: 2\n",
+      "14: 2\n",
+      "15: 1\n",
+      "16: 1\n",
+      "17: 1\n",
       "18: 0\n",
       "19: 0\n"
      ]
@@ -213,28 +214,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.3349908 , 0.11924137, 0.43018933, ..., 0.23105268, 0.20325419,\n",
-       "        0.31438278],\n",
-       "       [0.06345794, 0.67725415, 0.15500831, ..., 0.17103375, 0.99863344,\n",
-       "        0.1046623 ],\n",
-       "       [0.11434145, 0.89163578, 0.98460569, ..., 0.02383097, 0.76844143,\n",
-       "        0.8166585 ],\n",
+       "array([[0.32845994, 0.08800595, 0.35366426, ..., 0.92744572, 0.94109289,\n",
+       "        0.64824048],\n",
+       "       [0.95340447, 0.20285887, 0.69400369, ..., 0.74838858, 0.00372284,\n",
+       "        0.0410321 ],\n",
+       "       [0.2414378 , 0.28414413, 0.35682634, ..., 0.20760651, 0.43936144,\n",
+       "        0.70954616],\n",
        "       ...,\n",
-       "       [0.11075478, 0.48907421, 0.69731791, ..., 0.330521  , 0.09044452,\n",
-       "        0.968474  ],\n",
-       "       [0.62890204, 0.89251646, 0.9211009 , ..., 0.26656757, 0.68316064,\n",
-       "        0.46358345],\n",
-       "       [0.06638455, 0.24862305, 0.76238581, ..., 0.63175102, 0.6422038 ,\n",
-       "        0.39662713]])"
+       "       [0.76573673, 0.09661857, 0.2163361 , ..., 0.50826435, 0.15321952,\n",
+       "        0.80269831],\n",
+       "       [0.17347927, 0.03688877, 0.47919288, ..., 0.45078453, 0.03671861,\n",
+       "        0.17426771],\n",
+       "       [0.55944295, 0.60585788, 0.26495668, ..., 0.60143104, 0.66099469,\n",
+       "        0.52123074]])"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 225,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,16 +246,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "15"
+       "21"
       ]
      },
-     "execution_count": 166,
+     "execution_count": 226,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,48 +278,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "(32,\n",
-       " [(0, 15),\n",
-       "  (1, 66),\n",
-       "  (2, 8),\n",
-       "  (3, 50),\n",
-       "  (4, 65),\n",
-       "  (5, 65),\n",
-       "  (6, 71),\n",
-       "  (7, 51),\n",
-       "  (8, 65),\n",
-       "  (9, 51),\n",
-       "  (10, 65),\n",
-       "  (11, 65),\n",
-       "  (12, 50),\n",
-       "  (13, 30),\n",
-       "  (14, 45),\n",
-       "  (15, 65),\n",
-       "  (16, 50),\n",
-       "  (17, 65),\n",
-       "  (18, 50),\n",
-       "  (19, 50),\n",
-       "  (20, 15),\n",
-       "  (21, 2),\n",
-       "  (22, 8),\n",
-       "  (23, 65),\n",
-       "  (24, 65),\n",
-       "  (25, 50),\n",
-       "  (26, 50),\n",
-       "  (27, 81),\n",
-       "  (28, 45),\n",
-       "  (29, 30),\n",
-       "  (30, 96),\n",
-       "  (31, 33)])"
+       " [(0, 21),\n",
+       "  (1, 92),\n",
+       "  (2, 58),\n",
+       "  (3, 13),\n",
+       "  (4, 50),\n",
+       "  (5, 50),\n",
+       "  (6, 21),\n",
+       "  (7, 21),\n",
+       "  (8, 21),\n",
+       "  (9, 21),\n",
+       "  (10, 50),\n",
+       "  (11, 26),\n",
+       "  (12, 58),\n",
+       "  (13, 49),\n",
+       "  (14, 21),\n",
+       "  (15, 50),\n",
+       "  (16, 58),\n",
+       "  (17, 50),\n",
+       "  (18, 13),\n",
+       "  (19, 21),\n",
+       "  (20, 21),\n",
+       "  (21, 21),\n",
+       "  (22, 13),\n",
+       "  (23, 13),\n",
+       "  (24, 9),\n",
+       "  (25, 58),\n",
+       "  (26, 72),\n",
+       "  (27, 21),\n",
+       "  (28, 47),\n",
+       "  (29, 21),\n",
+       "  (30, 27),\n",
+       "  (31, 38)])"
       ]
      },
-     "execution_count": 168,
+     "execution_count": 228,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,47 +330,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(21, 2),\n",
-       " (2, 8),\n",
-       " (22, 8),\n",
-       " (0, 15),\n",
-       " (20, 15),\n",
-       " (13, 30),\n",
-       " (29, 30),\n",
-       " (31, 33),\n",
-       " (14, 45),\n",
-       " (28, 45),\n",
-       " (3, 50),\n",
-       " (12, 50),\n",
-       " (16, 50),\n",
-       " (18, 50),\n",
-       " (19, 50),\n",
-       " (25, 50),\n",
-       " (26, 50),\n",
-       " (7, 51),\n",
-       " (9, 51),\n",
-       " (4, 65),\n",
-       " (5, 65),\n",
-       " (8, 65),\n",
-       " (10, 65),\n",
-       " (11, 65),\n",
-       " (15, 65),\n",
-       " (17, 65),\n",
-       " (23, 65),\n",
-       " (24, 65),\n",
-       " (1, 66),\n",
-       " (6, 71),\n",
-       " (27, 81),\n",
-       " (30, 96)]"
+       "[(24, 9),\n",
+       " (3, 13),\n",
+       " (18, 13),\n",
+       " (22, 13),\n",
+       " (23, 13),\n",
+       " (0, 21),\n",
+       " (6, 21),\n",
+       " (7, 21),\n",
+       " (8, 21),\n",
+       " (9, 21),\n",
+       " (14, 21),\n",
+       " (19, 21),\n",
+       " (20, 21),\n",
+       " (21, 21),\n",
+       " (27, 21),\n",
+       " (29, 21),\n",
+       " (11, 26),\n",
+       " (30, 27),\n",
+       " (31, 38),\n",
+       " (28, 47),\n",
+       " (13, 49),\n",
+       " (4, 50),\n",
+       " (5, 50),\n",
+       " (10, 50),\n",
+       " (15, 50),\n",
+       " (17, 50),\n",
+       " (2, 58),\n",
+       " (12, 58),\n",
+       " (16, 58),\n",
+       " (25, 58),\n",
+       " (26, 72),\n",
+       " (1, 92)]"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 229,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +397,7 @@
        "       \"'walrus'\"], dtype='<U13')"
       ]
      },
-     "execution_count": 170,
+     "execution_count": 230,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,45 +410,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "'moskito' 2\n",
-      "'bat' 8\n",
-      "'ostrich' 8\n",
-      "'antelop' 15\n",
-      "'lion' 15\n",
-      "'frog' 30\n",
-      "'skunk' 30\n",
-      "'walrus' 33\n",
-      "'giraffe' 45\n",
-      "'seaturtle' 45\n",
-      "'bear' 50\n",
-      "'elephant' 50\n",
-      "'horse' 50\n",
-      "'hyena' 50\n",
-      "'kangaroo' 50\n",
-      "'pig' 50\n",
-      "'rabbit' 50\n",
-      "'cat' 51\n",
-      "'dog' 51\n",
-      "'beetle' 65\n",
-      "'butterfly' 65\n",
-      "'crocodile' 65\n",
-      "'dragonfly' 65\n",
-      "'duck' 65\n",
-      "'grasshopper' 65\n",
-      "'housefly' 65\n",
-      "'pelican' 65\n",
-      "'penguin' 65\n",
-      "'ape' 66\n",
-      "'camel' 71\n",
-      "'rat' 81\n",
-      "'spider' 96\n"
+      "'penguin' 9\n",
+      "'bear' 13\n",
+      "'hyena' 13\n",
+      "'ostrich' 13\n",
+      "'pelican' 13\n",
+      "'antelop' 21\n",
+      "'camel' 21\n",
+      "'cat' 21\n",
+      "'crocodile' 21\n",
+      "'dog' 21\n",
+      "'giraffe' 21\n",
+      "'kangaroo' 21\n",
+      "'lion' 21\n",
+      "'moskito' 21\n",
+      "'rat' 21\n",
+      "'skunk' 21\n",
+      "'duck' 26\n",
+      "'spider' 27\n",
+      "'walrus' 38\n",
+      "'seaturtle' 47\n",
+      "'frog' 49\n",
+      "'beetle' 50\n",
+      "'butterfly' 50\n",
+      "'dragonfly' 50\n",
+      "'grasshopper' 50\n",
+      "'housefly' 50\n",
+      "'bat' 58\n",
+      "'elephant' 58\n",
+      "'horse' 58\n",
+      "'pig' 58\n",
+      "'rabbit' 72\n",
+      "'ape' 92\n"
      ]
     }
    ],
