--- a/Lab2/SOM_animals.ipynb
+++ b/Lab2/SOM_animals.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
        "(32, 84)"
       ]
      },
-     "execution_count": 218,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
        "       0, 0, 1, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0])"
       ]
      },
-     "execution_count": 219,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,6 +145,7 @@
     "                # print(\"{} is in neighbors\".format(row))\n",
     "                # print(\"old row{}: {}\".format(row, self.weight_matrix[row]))\n",
     "                new_row = self.weight_matrix[row] + (sample - self.weight_matrix[row]) * self.step_size\n",
+    "                self.weight_matrix[row] = new_row\n",
     "                # print(\"new_row {}: {}\".format(row, new_row))\n",
     "\n",
     "    def fit(self, X, n_epochs):\n",
@@ -169,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -214,28 +215,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.32845994, 0.08800595, 0.35366426, ..., 0.92744572, 0.94109289,\n",
-       "        0.64824048],\n",
-       "       [0.95340447, 0.20285887, 0.69400369, ..., 0.74838858, 0.00372284,\n",
-       "        0.0410321 ],\n",
-       "       [0.2414378 , 0.28414413, 0.35682634, ..., 0.20760651, 0.43936144,\n",
-       "        0.70954616],\n",
+       "array([[2.73871761e-03, 1.61755571e-13, 1.72402375e-08, ...,\n",
+       "        6.29742983e-14, 1.26781860e-12, 5.87237291e-01],\n",
+       "       [4.22995265e-01, 9.50646454e-14, 1.37297527e-08, ...,\n",
+       "        1.33917766e-14, 8.03388599e-13, 1.79467883e-01],\n",
+       "       [7.12217495e-01, 1.21044704e-13, 2.68131917e-08, ...,\n",
+       "        4.13757217e-14, 1.03852567e-12, 1.12220159e-01],\n",
        "       ...,\n",
-       "       [0.76573673, 0.09661857, 0.2163361 , ..., 0.50826435, 0.15321952,\n",
-       "        0.80269831],\n",
-       "       [0.17347927, 0.03688877, 0.47919288, ..., 0.45078453, 0.03671861,\n",
-       "        0.17426771],\n",
-       "       [0.55944295, 0.60585788, 0.26495668, ..., 0.60143104, 0.66099469,\n",
-       "        0.52123074]])"
+       "       [3.90380339e-08, 9.99999783e-01, 3.19933428e-08, ...,\n",
+       "        3.13322407e-04, 9.99686572e-01, 5.56814134e-03],\n",
+       "       [6.08984506e-08, 9.99999823e-01, 4.01276463e-08, ...,\n",
+       "        3.13292110e-04, 9.99686629e-01, 5.56812261e-03],\n",
+       "       [6.62486690e-01, 8.13865839e-01, 1.77939593e-02, ...,\n",
+       "        3.29701119e-02, 8.53232302e-01, 6.43724927e-01]])"
       ]
      },
-     "execution_count": 225,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,16 +247,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "21"
+       "2"
       ]
      },
-     "execution_count": 226,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,48 +279,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "(32,\n",
-       " [(0, 21),\n",
-       "  (1, 92),\n",
-       "  (2, 58),\n",
-       "  (3, 13),\n",
-       "  (4, 50),\n",
-       "  (5, 50),\n",
-       "  (6, 21),\n",
-       "  (7, 21),\n",
-       "  (8, 21),\n",
-       "  (9, 21),\n",
-       "  (10, 50),\n",
-       "  (11, 26),\n",
-       "  (12, 58),\n",
-       "  (13, 49),\n",
-       "  (14, 21),\n",
-       "  (15, 50),\n",
-       "  (16, 58),\n",
-       "  (17, 50),\n",
-       "  (18, 13),\n",
-       "  (19, 21),\n",
-       "  (20, 21),\n",
-       "  (21, 21),\n",
-       "  (22, 13),\n",
-       "  (23, 13),\n",
-       "  (24, 9),\n",
-       "  (25, 58),\n",
-       "  (26, 72),\n",
-       "  (27, 21),\n",
-       "  (28, 47),\n",
-       "  (29, 21),\n",
-       "  (30, 27),\n",
-       "  (31, 38)])"
+       " [(0, 2),\n",
+       "  (1, 32),\n",
+       "  (2, 15),\n",
+       "  (3, 38),\n",
+       "  (4, 95),\n",
+       "  (5, 89),\n",
+       "  (6, 0),\n",
+       "  (7, 28),\n",
+       "  (8, 47),\n",
+       "  (9, 22),\n",
+       "  (10, 98),\n",
+       "  (11, 65),\n",
+       "  (12, 7),\n",
+       "  (13, 54),\n",
+       "  (14, 0),\n",
+       "  (15, 92),\n",
+       "  (16, 5),\n",
+       "  (17, 81),\n",
+       "  (18, 35),\n",
+       "  (19, 9),\n",
+       "  (20, 25),\n",
+       "  (21, 85),\n",
+       "  (22, 58),\n",
+       "  (23, 70),\n",
+       "  (24, 61),\n",
+       "  (25, 0),\n",
+       "  (26, 12),\n",
+       "  (27, 17),\n",
+       "  (28, 50),\n",
+       "  (29, 19),\n",
+       "  (30, 77),\n",
+       "  (31, 43)])"
       ]
      },
-     "execution_count": 228,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,47 +331,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(24, 9),\n",
-       " (3, 13),\n",
-       " (18, 13),\n",
-       " (22, 13),\n",
-       " (23, 13),\n",
-       " (0, 21),\n",
-       " (6, 21),\n",
-       " (7, 21),\n",
-       " (8, 21),\n",
-       " (9, 21),\n",
-       " (14, 21),\n",
-       " (19, 21),\n",
-       " (20, 21),\n",
-       " (21, 21),\n",
-       " (27, 21),\n",
-       " (29, 21),\n",
-       " (11, 26),\n",
-       " (30, 27),\n",
-       " (31, 38),\n",
-       " (28, 47),\n",
-       " (13, 49),\n",
-       " (4, 50),\n",
-       " (5, 50),\n",
-       " (10, 50),\n",
-       " (15, 50),\n",
-       " (17, 50),\n",
-       " (2, 58),\n",
-       " (12, 58),\n",
-       " (16, 58),\n",
-       " (25, 58),\n",
-       " (26, 72),\n",
-       " (1, 92)]"
+       "[(6, 0),\n",
+       " (14, 0),\n",
+       " (25, 0),\n",
+       " (0, 2),\n",
+       " (16, 5),\n",
+       " (12, 7),\n",
+       " (19, 9),\n",
+       " (26, 12),\n",
+       " (2, 15),\n",
+       " (27, 17),\n",
+       " (29, 19),\n",
+       " (9, 22),\n",
+       " (20, 25),\n",
+       " (7, 28),\n",
+       " (1, 32),\n",
+       " (18, 35),\n",
+       " (3, 38),\n",
+       " (31, 43),\n",
+       " (8, 47),\n",
+       " (28, 50),\n",
+       " (13, 54),\n",
+       " (22, 58),\n",
+       " (24, 61),\n",
+       " (11, 65),\n",
+       " (23, 70),\n",
+       " (30, 77),\n",
+       " (17, 81),\n",
+       " (21, 85),\n",
+       " (5, 89),\n",
+       " (15, 92),\n",
+       " (4, 95),\n",
+       " (10, 98)]"
       ]
      },
-     "execution_count": 229,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +398,7 @@
        "       \"'walrus'\"], dtype='<U13')"
       ]
      },
-     "execution_count": 230,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,45 +411,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "'penguin' 9\n",
-      "'bear' 13\n",
-      "'hyena' 13\n",
-      "'ostrich' 13\n",
-      "'pelican' 13\n",
-      "'antelop' 21\n",
-      "'camel' 21\n",
-      "'cat' 21\n",
-      "'crocodile' 21\n",
-      "'dog' 21\n",
-      "'giraffe' 21\n",
-      "'kangaroo' 21\n",
-      "'lion' 21\n",
-      "'moskito' 21\n",
-      "'rat' 21\n",
-      "'skunk' 21\n",
-      "'duck' 26\n",
-      "'spider' 27\n",
-      "'walrus' 38\n",
-      "'seaturtle' 47\n",
-      "'frog' 49\n",
-      "'beetle' 50\n",
-      "'butterfly' 50\n",
-      "'dragonfly' 50\n",
-      "'grasshopper' 50\n",
-      "'housefly' 50\n",
-      "'bat' 58\n",
-      "'elephant' 58\n",
-      "'horse' 58\n",
-      "'pig' 58\n",
-      "'rabbit' 72\n",
-      "'ape' 92\n"
+      "'camel' 0\n",
+      "'giraffe' 0\n",
+      "'pig' 0\n",
+      "'antelop' 2\n",
+      "'horse' 5\n",
+      "'elephant' 7\n",
+      "'kangaroo' 9\n",
+      "'rabbit' 12\n",
+      "'bat' 15\n",
+      "'rat' 17\n",
+      "'skunk' 19\n",
+      "'dog' 22\n",
+      "'lion' 25\n",
+      "'cat' 28\n",
+      "'ape' 32\n",
+      "'hyena' 35\n",
+      "'bear' 38\n",
+      "'walrus' 43\n",
+      "'crocodile' 47\n",
+      "'seaturtle' 50\n",
+      "'frog' 54\n",
+      "'ostrich' 58\n",
+      "'penguin' 61\n",
+      "'duck' 65\n",
+      "'pelican' 70\n",
+      "'spider' 77\n",
+      "'housefly' 81\n",
+      "'moskito' 85\n",
+      "'butterfly' 89\n",
+      "'grasshopper' 92\n",
+      "'beetle' 95\n",
+      "'dragonfly' 98\n"
      ]
     }
    ],
