--- a/Lab2/SOM_animals.ipynb
+++ b/Lab2/SOM_animals.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
        "(32, 84)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,7 +90,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def descending_logarithmic(x):\n",
+    "def descending_logarithmic(x, n):\n",
     "    A = 49\n",
     "    k = -np.log(0.03) / 16  # Calcola k in modo che y sia 1 quando x è 16\n",
     "    B = 0  # Per ottenere y = 1 quando x è 16\n",
