part 4 and part 5 (almost) of lab3

--- a/lab3/lab3.ipynb
+++ b/lab3/lab3.ipynb
@@ -172,6 +172,9 @@
     "        print('-------')\n",
     "    else:\n",
     "        print(f'Pattern {i} recalled')\n",
+    "        print(f'pattern : {p}')\n",
+    "        print(f'recall : {net.state()}')\n",
+    "        print('-------')\n",
     "print()\n",
     "\n",
     "# Noisy patterns\n",
